[package]
name = "async-rusoto_core"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
bytes = "0.5"
rusoto_signature = "0.43"
rusoto_credential = "0.43"
rusoto_core = "0.43"
http = "0.2"
http-types = "1.2"
http-client = { version = "2.0", features = ["curl_client"] }
async-std = "1.5"
